--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                         <br>
                     </div>
 
+
                     <div id="Card-Wo">
     
                         <div class="carousel text-center margin0">
@@ -101,7 +102,11 @@
                         </div>
                     </div>
 
-
+                    <div id="publicidad" class="Font-size-GC text-center Font-Historia Font-size-GC Color Font-Cursive paddingM ">
+                    <a href="https://israelre136.github.io/Luz-Lente.github.io/" target="_blank">
+                        <img class="adjust"src="img/luz.png" alt="Luz&Lente">
+                    </a>
+                    </div>
       
             <div id="Card-Fondo" class="Font-Color-Black Font-Cursive" >
                 <h1 class="text-center Font-Historia Font-size-GC Color Font-Cursive paddingM ">
