--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
                         </div>
                     </div>
 
-                    <div id="publicidad" class="Font-size-GC text-center Font-Historia Font-size-GC Color Font-Cursive paddingM ">
+                    <div id="publicidad" class="Font-size-GC text-center Font-Historia Font-size-MC Color Font-Cursive paddingM ">
+                        <p>Fotos by</p>
                     <a href="https://israelre136.github.io/Luz-Lente.github.io/" target="_blank">
-                        <img class="adjust"src="img/luz.png" alt="Luz&Lente">
+                        <img class="adjust2"src="img/luz.png" alt="Luz&Lente">
                     </a>
                     </div>
       
